<?xml version="1.0"?>
<package>
    <name>nao</name>
    <version>1.0.0</version>
    <description>The nao_HCR_tutorial_6 package</description>

    <maintainer email="20560137+aWeinzierl@users.noreply.github.com">aWeinzierl</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>naoqi_bridge_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>actionlib</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>naoqi_bridge_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>actionlib</run_depend>

</package>
